# vrm-solar-automation

./: .env.example  .env.wsl  .gitignore  README.md  alembic.ini  historical_power_system_actuals.csv  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260405_0001_create_automation_tables.py  20260405_0002_add_quiet_hours_flag_to_controller_state.py  20260405_0003_add_alert_latches_to_controller_state.py  20260405_0004_add_weather_cache_and_source.py  20260406_0005_add_sunshine_hours_tracking.py  20260407_0006_add_surplus_night_fields.py  20260408_0007_add_weather_block_alert_latch.py  20260408_0008_add_adaptive_soc_diagnostics.py  20260409_0009_add_power_telemetry_resilience_fields.py
deploy/systemd/: vrm-solar-automation.service  vrm-solar-automation.timer
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
scripts/: augment_historicals_weather.py  cerbo_modbus_snapshot.py  pump_control_loop.py  pump_control_snapshot.py  pump_dry_run_snapshot.py
src/vrm_solar_automation/: __init__.py  api.py  cerbo.py  cli.py  client.py  config.py  db.py  historical_weather.py  mock_data.py  models.py  notifier.py  policy.py  runtime.py  shelly.py  state.py  system.py  telemetry.py  weather.py
src/vrm_solar_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_cli.py  test_config.py  test_control_system.py  test_historical_weather.py  test_notifier.py  test_runtime.py  test_shelly.py  test_state.py  test_telemetry.py  test_weather.py
