[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrm-solar-automation"
version = "0.1.0"
description = "Query Victron VRM for battery, solar, and house load metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiomqtt>=2.3.0",
  "aiohttp>=3.13.3",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "victron-vrm>=0.1.11",
]

[project.scripts]
vrm-probe = "vrm_solar_automation.cli:main"
vrm-pump-policy = "vrm_solar_automation.cli:main"
vrm-api = "vrm_solar_automation.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
