[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrm-solar-automation"
version = "0.1.0"
description = "Query Victron VRM for battery, solar, and house load metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.13.3",
  "alembic>=1.18.4",
  "SQLAlchemy>=2.0.49",
  "victron-vrm>=0.1.11",
]

[project.scripts]
vrm-probe = "vrm_solar_automation.cli:main"
vrm-pump-policy = "vrm_solar_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
